fix step10 spacing

--- a/estilos/fuga1-5.css
+++ b/estilos/fuga1-5.css
@@ -73,6 +73,6 @@
 
   .fuga-p-1-5 {
     font-size: 1rem;
-    max-width: 90vw;;
+    max-width: 90vw;
   }
 }
