--- a/estilos/step10.css
+++ b/estilos/step10.css
@@ -78,22 +78,25 @@
   transform: translateY(-50%);
 } */
 
-.step10-textos span {
+.step10-textos .step10-p {
+  position: relative;
   font-family: "IBM Plex Mono", monospace;
+  color: #000;
   font-size: 1.5rem;
-  height: 400px;
   opacity: 0;
   z-index: 5;
   transition: opacity 0.8s ease, transform 0.8s ease;
-  max-width: 50%;
   text-align: center;
   vertical-align: middle;
+  max-width: 900px;
+  margin: 0 auto;
+  top: 10px;
  
 }
 
 .step10-elements.active .step10-img-bottom { opacity: 1; transform: translateY(-2%); transition-delay: 0.4s; }
 .step10-elements.active .step10-img-top { opacity: 1; transform: translateY(-2%); transition-delay: 0.6s; }
-.step10-elements.active .step10-textos span { opacity: 1; transform: translateY(0); transition-delay: 0.8s; }
+.step10-elements.active .step10-textos .step10-p { opacity: 1; transform: translateY(0); transition-delay: 0.8s; }
 .step10-elements.active .step10-textos p { opacity: 1; transform: translateY(0); transition-delay: 1s; }
 
 .step10-elements .hoja-rasgada {
@@ -101,7 +104,7 @@
 }
 
 @media (max-width: 790px) {
-  .step10-textos span {
+  .step10-textos .step10-p {
     font-size: 1rem;
   }
 }
